--- a/about.html
+++ b/about.html
@@ -98,11 +98,11 @@
               <h3>MOVING FORWARD TOGETHER</h3> <p>If there’s one thing we at SGS have learned from the logistics trade, it’s
                 that the best outcomes are a direct result of people working together. We believe in doing our part for our
                 community, and are proud to support the following organizations.</p>
-                <img src="https://app.salesdrip.com/users/myteam45785/Media25.jpg" alt="">
+                <img id="tiaabout"src="https://app.salesdrip.com/users/myteam45785/Media25.jpg" alt="">
 
           </div>
         </div>
-        <div class="mainimg">
+        <div class="mainimg ">
           <a href="mailto:customerservice@simsglobalsolutions.com"><img src="https://app.salesdrip.com/users/myteam45785/Media15.png" alt=""></a>
         </div>
       </div>
