--- a/index.html
+++ b/index.html
@@ -136,37 +136,27 @@
         <div class="woodcontent">
           Enjoy the benefits of pre-negotiated pricing  programs with the top national, <br> regional, and local carriers in North America.
         </div>
-        <div class="woodbanner">
-          <div class="slider">
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-            <div class="slide">
-              <img src="" alt="">
-            </div>
-          </div>
-        </div>
+
+          <div class="scrolling-wrapper-flexbox">
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media258.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media249.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media253.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media256.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media259.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media257.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media261.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media250.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media263.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media254.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media251.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media252.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media262.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media260.png" alt=""> </div>
+    <div class="card"><img src="https://app.salesdrip.com/users/myteam45785/Media255.png" alt=""> </div>
+
+
+  </div>
+
       </div>
 
       </div>
