--- a/truckload.html
+++ b/truckload.html
@@ -42,7 +42,7 @@
               <li id="navitem"><a href="#">FAQS</a></li>
               <li id="navitem"><a href="#">BLOG</a></li>
               <li id="navitem"><a href="#">CONTACT</a></li>
-              <li><a id="loginnav" href="#">LOG IN</a></li>
+              <li><a id="loginnav" href="http://my.shipsims.com/Account/Login">LOG IN</a></li>
             </ul>
           </nav>
         </div>
@@ -90,19 +90,152 @@
           <a href=""><img src="https://app.salesdrip.com/users/myteam45785/Media11.png" alt=""></a>
         </div>
       </div>
-      <div class="trucklistsection">
-        <div class="trucklist">
-            <div>
-             <a href="#" class="truckbox"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Service Type</a>In the world of logistics, service is key. Sims Global can handle any service type from standard A-B shipping, Expedited, Partial, Economy/Volume, Multi-stop, and drop trailer. Depending on the needs and want’s our customers have, we will cater a service that works, every time!
-           </div>
-           <div>
-            <a href="#" class="truckbox"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Equipment Type</a>Don’t settle for second tier partnerships, work with an experienced broker who can procure any type of equipment, anywhere at anytime. Whether you need Dry Van, Flatbed, Refrigerated, Step-Deck, Heavy Haul, RGN or Over-Dimensional freight moved, we can handle all of this for you!</div>
-            <div>
-            <a href="#" class="truckbox"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Service Area</a>At Sims, we strive to be a 1 stop shop which is why we have expanded to include international services with our International Forwarding license. Along with our new international services, we are able to offer exception services with national Coverage, Regional, Local, and even Cross-Border services through the relationships we have forged over many years of experience in the logistics industry.</div>
-            <a href="#" class="truckbox"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Expedited</a>
-            <a href="#" class="truckbox"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">Project Freight</a>
-            <a href="#" class="truckbox"><img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">High Value Freight</a>
+      <div class="servlists">
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Service Type</div>
+          <div class="typeitem">
+            Standard
+          </div>
+          <div class="typeitem">
+            Expedited
+          </div>
+          <div class="typeitem">
+            Partial Truckload
+          </div>
+          <div class="typeitem">
+            Economy/Volume
+          </div>
+          <div class="typeitem">
+            Multi-Stop
+          </div>
+          <div class="typeitem">
+            Drop Trailer
+          </div>
+          </div>
         </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Equipment Type</div>
+          <div class="typeitem">
+            Dry Van
+          </div>
+          <div class="typeitem">
+            Flatbed
+          </div>
+          <div class="typeitem">
+            Refrigerated
+          </div>
+          <div class="typeitem">
+           Step-Deck
+          </div>
+          <div class="typeitem">
+           Heavy Haul
+          </div>
+          <div class="typeitem">
+           RGN
+          </div>
+          <div class="typeitem">
+           Over-Dimensional
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Service Area</div>
+          <div class="typeitem">
+            Cross-Border
+          </div>
+          <div class="typeitem">
+            National Coverage
+          </div>
+          <div class="typeitem">
+            Reginal Coverage
+          </div>
+          <div class="typeitem">
+           Local Coverage
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Expedited</div>
+          <div class="typeitem">
+            Dedicated Team Drivers
+          </div>
+          <div class="typeitem">
+            Real-Time GPS tracking
+          </div>
+          <div class="typeitem">
+            Proactive Updates
+          </div>
+          <div class="typeitem">
+           24/7 Support
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">Project Freight</div>
+          <div class="typeitem">
+            Retail Rollout
+          </div>
+          <div class="typeitem">
+            Holiday Volume Surge
+          </div>
+          <div class="typeitem">
+            Disaster Relief
+          </div>
+          <div class="typeitem">
+           Government
+          </div>
+          <div class="typeitem">
+           Military
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
+        <div class="typelist">
+          <div class="listicon">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media42.png" alt="">
+          </div>
+          <div class="listcontent">
+          <div class="titlelist">High Value Freight</div>
+          <div class="typeitem">
+            Alcoholic Beverages
+          </div>
+          <div class="typeitem">
+            Pharmaceuticals
+          </div>
+          <div class="typeitem">
+            Electronics
+          </div>
+          <div class="typeitem">
+           Hazmat
+          </div>
+          </div>
+        </div>
+        <!--------------------------------List------------------------------>
       </div>
       </div>
     </div>
